feat: update endpoints
