# src/routes/index.js
@@ -10,6 +10,6 @@ const router = Router()
 router.use('/events', eventRouter)
 router.use('/login', loginRouter)
 router.use('/doc', swaggerRoutes)
-router.use('/user', userRouter)
+router.use('/users', userRouter)
 
 export default router
