# src/routes/user.routes.js
@@ -7,7 +7,7 @@ import { validateId } from '../utils/validators/id.validator.js'
 const userRouter = Router()
 
 userRouter.post('/register', userController.createUser)
-userRouter.get('/all', userController.findAllUsers)
+userRouter.get('/', userController.findAllUsers)
 userRouter.get('/:id', validateId, userController.findById)
 userRouter.patch('/update/:id', authMiddleware, userController.updateUser)
 
